--- a/arrays.ipynb
+++ b/arrays.ipynb
@@ -447,7 +447,8 @@
    "id": "8fe623fb",
    "metadata": {},
    "source": [
-    "### 2. Optimized Solution"
+    "### 2. Optimized Solution\n",
+    "#### Fast and Slow Pointers"
    ]
   },
   {
@@ -456,7 +457,35 @@
    "id": "22243be8",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\"\"\"\n",
+    "Slow and Fast pointer approach works under specific conditions:\n",
+    "    - (n+1) integers\n",
+    "    - All numbers are in range 1 to n\n",
+    "    - There is exactly one duplicate (may repeat multiple times) \n",
+    "\"\"\"\n",
+    "class Solution:\n",
+    "    def findDuplicate(self, nums: List[int]) -> int:\n",
+    "        slow = nums[0]\n",
+    "        fast = nums[0]\n",
+    "\n",
+    "        while True:\n",
+    "            slow = nums[slow]\n",
+    "            fast = nums[nums[fast]]\n",
+    "\n",
+    "            if slow == fast:\n",
+    "                # cycle is present\n",
+    "                # shift slow to start of the \n",
+    "                # move both slow and fast pointer in same direct one step a time\n",
+    "                break\n",
+    "        \n",
+    "        slow = nums[0]\n",
+    "        while slow != fast:\n",
+    "            slow = nums[slow]\n",
+    "            fast = nums[fast]\n",
+    "\n",
+    "        return slow"
+   ]
   }
  ],
  "metadata": {
