--- a/arrays.ipynb
+++ b/arrays.ipynb
@@ -10,21 +10,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "febfc648",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def minRotatedSorted(arr):\n",
     "    '''Modified Binary Search'''\n",
@@ -55,26 +44,23 @@
    "id": "eedd7644",
    "metadata": {},
    "source": [
-    "## 📌Search in Rotated Sorted"
+    "## 📌Rotated Sorted"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "655820ef",
+   "metadata": {},
+   "source": [
+    "### 1. Find minimum in rotated sorted"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "34f01150",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "4"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def searchRotatedSorted(arr, key):\n",
     "    low_index = 0\n",
@@ -108,68 +94,110 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "157a4920",
+   "cell_type": "markdown",
+   "id": "2fea38da",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "\n",
-    "from typing import List\n",
-    "class Solution:\n",
-    "    def search(self, nums: List[int], target: int) -> int:\n",
-    "            low_index = 0\n",
-    "            high_index = len(nums) - 1\n",
-    "\n",
-    "            while low_index <= high_index:\n",
-    "                # Calculate middle\n",
-    "                mid_index = (low_index + high_index) // 2\n",
-    "\n",
-    "                # Check for values \n",
-    "                if nums[mid_index] == target:\n",
-    "                    return mid_index\n",
-    "                \n",
-    "                # When key is less than middle value\n",
-    "                elif target <= nums[mid_index]:\n",
-    "                    # Case 1\n",
-    "                    if target >= nums[low_index]:\n",
-    "                        high_index = mid_index - 1\n",
-    "                    \n",
-    "                    elif target < nums[low_index]:\n",
-    "                        low_index = mid_index + 1\n",
-    "\n",
-    "                # When key is more than middle\n",
-    "                elif target > nums[mid_index]:\n",
-    "                    # Case\n",
-    "                    if target >= nums[mid_index]:\n",
-    "                        high_index = mid_index - 1\n",
-    "                    \n",
-    "                    elif target < nums[low_index]:\n",
-    "                        low_index = mid_index + 1\n",
-    "            \n",
-    "            return -1"
+    "### 2. Search in rotated sorted (with distinct integers)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
+   "id": "157a4920",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def search(self, nums: List[int], target: int) -> int:\n",
+    "        # define left and right indexes\n",
+    "        left = 0\n",
+    "        right = len(nums) -1\n",
+    "        \n",
+    "        # start the loop\n",
+    "        while left <= right:\n",
+    "            # calculate mid value and match with target \n",
+    "            mid = (left + right) // 2\n",
+    "            \n",
+    "            if nums[mid] == target:\n",
+    "                return mid\n",
+    "            \n",
+    "            # check which side of mid is sorted \n",
+    "            # left sorted\n",
+    "            elif nums[left] <= nums[mid]:\n",
+    "                # check which side of mid target lies \n",
+    "                if nums[left] <= target < nums[mid]:\n",
+    "                    right = (mid - 1)\n",
+    "\n",
+    "                else:\n",
+    "                    left = (mid + 1)\n",
+    "\n",
+    "            # right sorted \n",
+    "            else:\n",
+    "                # check which side of mid target lies \n",
+    "                if nums[mid] < target <= nums[right]:\n",
+    "                    left = (mid + 1)\n",
+    "                \n",
+    "                else:\n",
+    "                    right = (mid - 1)\n",
+    "            \n",
+    "        return -1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8ca6faef",
+   "metadata": {},
+   "source": [
+    "### 3. Search in rotated sorted (with non distinct integers)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "cb3e2cb0",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "a = Solution()\n",
-    "a.search([4,5,6,7,0,1,2], 5)"
+    "class Solution:\n",
+    "    def search(self, nums: List[int], target: int) -> int:\n",
+    "        # define left and right indexes\n",
+    "        left = 0\n",
+    "        right = len(nums) -1\n",
+    "        \n",
+    "        # start the loop\n",
+    "        while left <= right:\n",
+    "            # calculate mid value and match with target \n",
+    "            mid = (left + right) // 2\n",
+    "            \n",
+    "            if nums[mid] == target:\n",
+    "                return True\n",
+    "            \n",
+    "            # if duplicate block the decision \n",
+    "            if nums[left] == nums[mid] == nums[right]:\n",
+    "                left += 1\n",
+    "                right -= 1        \n",
+    "            \n",
+    "            # check which side of mid is sorted \n",
+    "            # left sorted\n",
+    "            elif nums[left] <= nums[mid]:\n",
+    "                # check which side of mid target lies \n",
+    "                if nums[left] <= target < nums[mid]:\n",
+    "                    right = (mid - 1)\n",
+    "\n",
+    "                else:\n",
+    "                    left = (mid + 1)\n",
+    "\n",
+    "            # right sorted \n",
+    "            else:\n",
+    "                # check which side of mid target lies \n",
+    "                if nums[mid] < target <= nums[right]:\n",
+    "                    left = (mid + 1)\n",
+    "                \n",
+    "                else:\n",
+    "                    right = (mid - 1)\n",
+    "            \n",
+    "        return False"
    ]
   },
   {
@@ -182,27 +210,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "07e646be",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[[-5, 1, 4],\n",
-       " [-3, -1, 4],\n",
-       " [-3, 0, 3],\n",
-       " [-2, -1, 3],\n",
-       " [-2, 1, 1],\n",
-       " [-1, 0, 1],\n",
-       " [0, 0, 0]]"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from typing import List\n",
     "class Solution:\n",
@@ -289,21 +300,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "453b9a86",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "a = Solution()\n",
     "a.majorityElement([3,2,3])"
@@ -327,21 +327,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "a4cd1f28",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[1, 2]"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from typing import List\n",
     "class Solution:\n",
@@ -409,18 +398,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "3e939b42",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "class Solution:\n",
     "    def findDuplicate(self, nums: List[int]) -> int:\n",
