new algo in linked list

--- a/linked_list.ipynb
+++ b/linked_list.ipynb
@@ -47,7 +47,7 @@
     "                    slow = slow.next\n",
     "                    fast = fast.next\n",
     "                return slow\n",
-    "        \n",
+    "          \n",
     "        # No cycle present\n",
     "        return None"
    ]
@@ -107,6 +107,14 @@
     "head.next.next.next.next = Node(5)\n",
     "\n",
     "kth_from_end(head=head, k=2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "818f7e44",
+   "metadata": {},
+   "source": [
+    "## 📌 Remove Kth Element from End"
    ]
   },
   {
