new linked algo

--- a/linked_list.ipynb
+++ b/linked_list.ipynb
@@ -193,7 +193,34 @@
    "id": "53e781c9",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Definition for singly-linked list.\n",
+    "class ListNode:\n",
+    "    def __init__(self, val=0, next=None):\n",
+    "        self.val = val\n",
+    "        self.next = next\n",
+    "\n",
+    "class Solution:\n",
+    "    def removeNthFromEnd(self, head: Optional[ListNode], n: int) -> Optional[ListNode]:\n",
+    "        # Loop to move fast pointer to n position from start \n",
+    "        fast = head \n",
+    "        slow = head \n",
+    "        for _ in range(n):\n",
+    "            if not fast.next:\n",
+    "                return\n",
+    "            fast = fast.next\n",
+    "\n",
+    "        # Loop to move fast and slow pointer in same direction one step each till end\n",
+    "        while fast.next:\n",
+    "            fast = fast.next\n",
+    "            slow = slow.next\n",
+    "        \n",
+    "        # Remove the mentioned element \n",
+    "        slow.next = slow.next.next\n",
+    "     \n",
+    "\n",
+    "        "
+   ]
   }
  ],
  "metadata": {
