max product subarray

--- a/Kadanes.ipynb
+++ b/Kadanes.ipynb
@@ -42,6 +42,31 @@
    "id": "2ce4c3fa",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def maxProduct(self, nums: List[int]) -> int:\n",
+    "        # Initialize two variables current_max and overall_max \n",
+    "        max_p = nums[0]\n",
+    "        min_p = nums[0]\n",
+    "        result = nums[0]\n",
+    "\n",
+    "        for i in range(1, len(nums)):\n",
+    "            temp_min_p = min(nums[i], nums[i]*min_p, nums[i]*max_p)\n",
+    "            temp_max_p = max(nums[i], nums[i]*max_p, nums[i]*min_p)\n",
+    "\n",
+    "            min_p, max_p = temp_min_p, temp_max_p\n",
+    "\n",
+    "            result = max(max_p, result)\n",
+    "\n",
+    "        return result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "02ec5273",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
