--- a/arrays.ipynb
+++ b/arrays.ipynb
@@ -467,6 +467,64 @@
     "\n",
     "        return slow"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9e9c84bc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def maximumProduct(self, nums: List[int]) -> int:\n",
+    "        # Assign two pointers at distance of 3 from each other \n",
+    "        starting_pointer = 0\n",
+    "        mid_pointer = 1\n",
+    "        ending_pointer  = 2\n",
+    "        result = nums[starting_pointer] * nums[mid_pointer] * nums[ending_pointer]\n",
+    "\n",
+    "        # Start the loop\n",
+    "        for i in range(3, len(nums)):\n",
+    "            # Calculate the product \n",
+    "            temp_result = nums[i-2] * nums[i-1] * nums[i]\n",
+    "\n",
+    "            if temp_result > result:\n",
+    "                result = temp_result\n",
+    "\n",
+    "        return result\n",
+    "\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "a643233c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(3, 5):\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "599880a4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print"
+   ]
   }
  ],
  "metadata": {
