--- a/graphs.ipynb
+++ b/graphs.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "9379990b",
+   "metadata": {},
+   "source": [
+    "### 📌 Breadth First Search (BFS)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "b327e8cf",
@@ -52,9 +60,62 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "54fb8b38",
+   "metadata": {},
+   "source": [
+    "### 📌 DFS (Depth First Search)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "68c2a0b8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def dfs(graph, visited, node):\n",
+    "    if node in visited:\n",
+    "        return\n",
+    "    \n",
+    "    visited.add(node)\n",
+    "    print(node, end=\" \")\n",
+    "\n",
+    "    for neighbor in graph[node]:\n",
+    "        if neighbor not in visited:\n",
+    "            dfs(graph, visited, neighbor)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "5904a871",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 1 2 3 "
+     ]
+    }
+   ],
+   "source": [
+    "graph = {\n",
+    "    0 : [1,3],\n",
+    "    1 : [0,2],\n",
+    "    2 : [1,3],\n",
+    "    3 : [0,2]\n",
+    "}\n",
+    "\n",
+    "visited = set()\n",
+    "dfs(graph, visited, 0)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "83da1377",
+   "id": "0ccac6fa",
    "metadata": {},
    "outputs": [],
    "source": []
