number of islands problem

--- a/graphs.ipynb
+++ b/graphs.ipynb
@@ -113,9 +113,98 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "192cf89b",
+   "metadata": {},
+   "source": [
+    "### Number of Islands"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0ccac6fa",
+   "id": "0092875a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from typing import List\n",
+    "\n",
+    "class Solution:\n",
+    "    def numIslands(self, grid: List[List[str]]) -> int:\n",
+    "        if not grid:\n",
+    "            return 0\n",
+    "        \n",
+    "        rows, columns = len(grid) , len(grid[0])\n",
+    "        islands = 0\n",
+    "\n",
+    "        def dfs(r, c):\n",
+    "            # Boundard check\n",
+    "            if r<0 or r>=rows or c<0 or c>=columns or grid[r][c] == \"0\":\n",
+    "                return\n",
+    "\n",
+    "            # Turn current node value to 0\n",
+    "            grid[r][c] = \"0\"\n",
+    "\n",
+    "            # Call dfs in all four directions \n",
+    "            dfs(r+1, c)\n",
+    "            dfs(r-1, c)\n",
+    "            dfs(r, c+1)\n",
+    "            dfs(r, c-1)\n",
+    "\n",
+    "\n",
+    "        # Loop through each element of each row and column \n",
+    "        for r in range(rows):\n",
+    "            for c in range(columns):\n",
+    "                if grid[r][c] == \"1\":\n",
+    "                    # Increse the counter for islands \n",
+    "                    islands += 1\n",
+    "\n",
+    "                    # Call dfs with current start node\n",
+    "                    dfs(r, c)\n",
+    "        \n",
+    "        return islands\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "9e2dfe80",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "grid = [\n",
+    "  [\"1\",\"1\",\"1\",\"1\",\"0\"],\n",
+    "  [\"1\",\"1\",\"0\",\"1\",\"0\"],\n",
+    "  [\"1\",\"1\",\"0\",\"0\",\"0\"],\n",
+    "  [\"0\",\"0\",\"0\",\"0\",\"0\"]\n",
+    "]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "d8c9193c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(grid[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8cd70bbc",
    "metadata": {},
    "outputs": [],
    "source": []
