--- a/graphs.ipynb
+++ b/graphs.ipynb
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "id": "9e2dfe80",
    "metadata": {},
    "outputs": [],
@@ -222,21 +222,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "id": "f1b9e2d1",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3"
-      ]
-     },
-     "execution_count": 47,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "grid = [\n",
     "  [\"1\",\"1\",\"0\",\"0\",\"0\"],\n",
@@ -254,26 +243,15 @@
    "id": "7df89213",
    "metadata": {},
    "source": [
-    "### 3. Alternative DFS Approach"
+    "#### 3. Alternative DFS Approach"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
    "id": "3848e23f",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3"
-      ]
-     },
-     "execution_count": 54,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from typing import List\n",
     "\n",
@@ -332,28 +310,87 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3bd87c59",
+   "metadata": {},
+   "source": [
+    "### 📌 Area of Island"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "69edc42c",
+   "execution_count": 65,
+   "id": "eae7ab3d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "3"
+       "0"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "class Solution:\n",
+    "    def maxAreaOfIsland(self, grid: List[List[int]]) -> int:\n",
+    "        # Check if grid is present\n",
+    "        if not grid:\n",
+    "            return 0\n",
+    "        \n",
+    "        # Initialize array for area of lands\n",
+    "        total_mass_area = [0]\n",
+    "        \n",
+    "        # Get the dimension of the grid \n",
+    "        rows, columns = len(grid), len(grid[0])\n",
+    "\n",
+    "        # Initialise DFS \n",
+    "        def dfs(area, r,c):\n",
+    "            # Check if coordinates within boundary condition \n",
+    "            if r < 0 or r >= rows or c < 0 or c >= columns or grid[r][c] == 0:\n",
+    "                return area\n",
+    "            \n",
+    "            # Increment the area\n",
+    "            area += 1\n",
+    "\n",
+    "            # Mark the land mass as visited \n",
+    "            grid[r][c] = 0\n",
+    "\n",
+    "            # Recursively traverse in all directions \n",
+    "            area = dfs(area,r-1, c)\n",
+    "            area = dfs(area,r+1, c)\n",
+    "            area = dfs(area,r, c-1)\n",
+    "            area = dfs(area,r, c+1)\n",
+    "\n",
+    "            return area\n",
+    "\n",
+    "        # Traverse each point in the grid and check for 1\n",
+    "        for r in range(rows):\n",
+    "            for c in range(columns):\n",
+    "                if grid[r][c] == 1:\n",
+    "                    # Initialise area \n",
+    "                    current_area = 0\n",
+    "\n",
+    "                    # Initialise visited set \n",
+    "                    mass_area = dfs(current_area, r,c)\n",
+    "                    total_mass_area.append(mass_area)\n",
+    "\n",
+    "        return sorted(total_mass_area, reverse=True)[0]   \n",
+    "\n",
+    "\n",
+    "# grid = [[0,0,1,0,0,0,0,1,0,0,0,0,0],[0,0,0,0,0,0,0,1,1,1,0,0,0],[0,1,1,0,1,0,0,0,0,0,0,0,0],[0,1,0,0,1,1,0,0,1,0,1,0,0],[0,1,0,0,1,1,0,0,1,1,1,0,0],[0,0,0,0,0,0,0,0,0,0,1,0,0],[0,0,0,0,0,0,0,1,1,1,0,0,0],[0,0,0,0,0,0,0,1,1,0,0,0,0]]\n",
+    "grid = [[0,0,0,0,0,0,0,0]]\n",
+    "a = Solution()\n",
+    "a.maxAreaOfIsland(grid=grid)    "
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eae7ab3d",
+   "id": "de022da9",
    "metadata": {},
    "outputs": [],
    "source": []
