--- a/graphs.ipynb
+++ b/graphs.ipynb
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": null,
    "id": "eae7ab3d",
    "metadata": {},
    "outputs": [
@@ -372,7 +372,7 @@
     "            for c in range(columns):\n",
     "                if grid[r][c] == 1:\n",
     "                    # Initialise area \n",
-    "                    current_area = 0\n",
+    "                    current_area = 0  \n",
     "\n",
     "                    # Initialise visited set \n",
     "                    mass_area = dfs(current_area, r,c)\n",
@@ -388,12 +388,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ea8cad85",
+   "metadata": {},
+   "source": [
+    "### 📌 Rotting Oranges"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "de022da9",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "f"
+   ]
   }
  ],
  "metadata": {
