--- a/revision.ipynb
+++ b/revision.ipynb
@@ -86,13 +86,68 @@
    "id": "846aeea2",
    "metadata": {},
    "source": [
-    "### Majority Elements"
+    "### Majority Elements (Boyer-Moore Voting)\n",
+    "\n",
+    "Idea:\n",
+    "- Use count and tracker to find a candidate for the majority element\n",
+    "- Performs a final validation with nums.count(tracker) to ensure the candidate really is a majority."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "8ff89ca6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class Solution:\n",
+    "    def majorityElement(self, nums: List[int]) -> int: \n",
+    "        count = 0\n",
+    "        tracker = None\n",
+    "\n",
+    "        for element in nums:\n",
+    "            if count == 0:\n",
+    "                tracker = element \n",
+    "            \n",
+    "            if tracker == element:\n",
+    "                count += 1 \n",
+    "            \n",
+    "            else:\n",
+    "                count -= 1\n",
+    "\n",
+    "        final_count = nums.count(tracker)\n",
+    "\n",
+    "        if final_count > len(nums) // 2:\n",
+    "            return tracker\n",
+    "        \n",
+    "\n",
+    "sol = Solution()\n",
+    "sol.majorityElement(nums= [2,2,1,1,1,2,2])\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8ff89ca6",
+   "id": "99d3bb1d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "649adcfb",
    "metadata": {},
    "outputs": [],
    "source": []
