--- a/revision.ipynb
+++ b/revision.ipynb
@@ -137,9 +137,74 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f46b3584",
+   "metadata": {},
+   "source": [
+    "### Majority Elements II (Extended Boyer's Moore Voting Algorithm)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "99d3bb1d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[3]"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class Solution:\n",
+    "    def majorityElement(self, nums: List[int]) -> List[int]:\n",
+    "        # Initialise candidates and counts \n",
+    "        cand1, cand2 = None, None\n",
+    "        count1, count2 = 0, 0\n",
+    "\n",
+    "        # Loop through every elements\n",
+    "        for num in nums:\n",
+    "            # Check for valid conditions \n",
+    "            if cand1 == num:\n",
+    "                count1 += 1\n",
+    "            \n",
+    "            elif cand2 == num:\n",
+    "                count2 += 1\n",
+    "\n",
+    "            elif count1 == 0:\n",
+    "                cand1 = num\n",
+    "                count1 = 1\n",
+    "            \n",
+    "            elif count2 == 0:\n",
+    "                cand2 = num\n",
+    "                count2 = 1\n",
+    "\n",
+    "            else:\n",
+    "                count1 -= 1\n",
+    "                count2 -= 1\n",
+    "\n",
+    "        # Verify \n",
+    "        result = []\n",
+    "        for cand in [cand1, cand2]:\n",
+    "            if cand is not None and nums.count(cand) > len(nums) // 3:\n",
+    "                result.append(cand)\n",
+    "        \n",
+    "        return result\n",
+    "    \n",
+    "sol = Solution()\n",
+    "sol.majorityElement(nums= [3,2,3])\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "99d3bb1d",
+   "id": "649adcfb",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -147,7 +212,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "649adcfb",
+   "id": "244e3321",
    "metadata": {},
    "outputs": [],
    "source": []
