--- a/revision.ipynb
+++ b/revision.ipynb
@@ -202,6 +202,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b06cc669",
+   "metadata": {},
+   "source": [
+    "### 2 Sum"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "649adcfb",
