google- trapping rain water, array- longest substring

--- a/google.ipynb
+++ b/google.ipynb
@@ -141,6 +141,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "63c04173",
+   "metadata": {},
+   "source": [
+    "#### Trapping Rain Water"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "9e947ea3",
