array-longest substring length

--- a/arrays.ipynb
+++ b/arrays.ipynb
@@ -491,58 +491,56 @@
    "id": "2f98775f",
    "metadata": {},
    "source": [
-    "### Longest Substring Without Repearing Character (LT3)"
+    "### Longest Substring Without Repearing Character (LT-3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 43,
    "id": "180a2828",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "3"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
     }
    ],
    "source": [
     "class Solution:\n",
     "    def lengthOfLongestSubstring(self, s: str) -> int:\n",
-    "        # Define a set \n",
-    "        curr_string= set()\n",
+    "        # Initialise the pointers and set \n",
+    "        left = 0\n",
     "        result = 0\n",
+    "        char_set = set()\n",
     "\n",
-    "        # Loop through every element \n",
-    "        for character in s:\n",
-    "            # Check if it does not exists in set \n",
-    "            if character not in curr_string:\n",
-    "                # Add it to set \n",
-    "                curr_string.add(character)\n",
+    "        # Loop through the elements \n",
+    "        for right in range(len(s)):\n",
+    "            while s[right] in char_set:\n",
+    "                # Remove the left element \n",
+    "                char_set.remove(s[left])\n",
     "\n",
-    "            else:\n",
-    "                # Check for new max \n",
-    "                result = max(len(curr_string), result)\n",
-    "                # Clear the set \n",
-    "                curr_string.clear()\n",
-    "                # Add current\n",
-    "                curr_string.add(character)\n",
-    "        \n",
+    "                # Move left pointer\n",
+    "                left += 1\n",
+    "\n",
+    "            # Add current to set\n",
+    "            char_set.add(s[right])\n",
+    "\n",
+    "            # Check for current length \n",
+    "            result = max(result, len(char_set))\n",
+    "\n",
     "        return result\n",
-    "    \n",
+    "\n",
     "sol = Solution()\n",
-    "sol.lengthOfLongestSubstring(s = \"pwwkew\")"
+    "print(sol.lengthOfLongestSubstring(\"pwwkew\"))  # Output: 3"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "23f28c63",
+   "id": "9ea90807",
    "metadata": {},
    "outputs": [],
    "source": []
