maximum average subarray

--- a/arrays.ipynb
+++ b/arrays.ipynb
@@ -364,18 +364,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2dd32dd1",
-   "metadata": {},
-   "source": [
-    "### 2. Optimized Solution"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "32702eac",
    "metadata": {},
    "source": [
-    "## 📌Find Duplicate Number"
+    "## 📌 Find Duplicate Number"
    ]
   },
   {
@@ -491,23 +483,15 @@
    "id": "2f98775f",
    "metadata": {},
    "source": [
-    "### Longest Substring Without Repearing Character (LT-3)"
+    "## 📌 Longest Substring Without Repearing Character (LT-3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "id": "180a2828",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "class Solution:\n",
     "    def lengthOfLongestSubstring(self, s: str) -> int:\n",
@@ -538,12 +522,93 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "838bb1ff",
+   "metadata": {},
+   "source": [
+    "## 📌 Maximum Average Subarray (LT-643)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3b9dd5d5",
+   "metadata": {},
+   "source": [
+    "#### 1. Fist Approach"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9ea90807",
+   "id": "0a4347a5",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from typing import List\n",
+    "\n",
+    "class Solution:\n",
+    "    def findMaxAverage(self, nums: List[int], k: int) ->  float:\n",
+    "        # Initialise the left pointer, results\n",
+    "        left = 0\n",
+    "        running_sum= 0\n",
+    "        result = float(\"-inf\")\n",
+    "\n",
+    "        # Loop through the list \n",
+    "        for right in range(len(nums)):\n",
+    "            # Check if window exists\n",
+    "            if right-left == k-1:\n",
+    "                running_sum += nums[right]\n",
+    "\n",
+    "                # Calculate the average\n",
+    "                curr_avg = running_sum / k\n",
+    "\n",
+    "                # Check for max avg\n",
+    "                result = max(result, curr_avg)\n",
+    "\n",
+    "                # Move the left pointer\n",
+    "                running_sum -= nums[left]\n",
+    "                left += 1\n",
+    "\n",
+    "            else:\n",
+    "                # Add current element to running sum\n",
+    "                running_sum += nums[right]\n",
+    "        \n",
+    "        return result\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f89bdf29",
+   "metadata": {},
+   "source": [
+    "#### 2. Optimised Approach\n",
+    "- Don't recalculate window sum everytime, else add one in front and remove one from rear \n",
+    "- We can use sum to calculate sum of list "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5f973b42",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def findMaxAverage(self, nums: List[int], k: int) ->  float:\n",
+    "        # Caculate first sum \n",
+    "        window_sum = sum(nums[0:k])\n",
+    "        result = window_sum\n",
+    "        \n",
+    "        # Loop through the elements \n",
+    "        for i in range(k, len(nums)):\n",
+    "            # Get the sum of the window \n",
+    "            window_sum = (window_sum + nums[i]) - nums[i-k]\n",
+    "\n",
+    "            # Compare the current window sum with exisitng \n",
+    "            result = max(window_sum, result)\n",
+    "\n",
+    "        return result / k"
+   ]
   }
  ],
  "metadata": {
