minimum size subarray

--- a/arrays.ipynb
+++ b/arrays.ipynb
@@ -483,7 +483,9 @@
    "id": "2f98775f",
    "metadata": {},
    "source": [
-    "## 📌 Longest Substring Without Repearing Character (LT-3)"
+    "## 📌 Longest Substring Without Repearing Character (LT-3)\n",
+    "- Non - repeating characters, think of using set() or deque()\n",
+    "- Calculate result in each iterations "
    ]
   },
   {
@@ -518,7 +520,7 @@
     "        return result\n",
     "\n",
     "sol = Solution()\n",
-    "print(sol.lengthOfLongestSubstring(\"pwwkew\"))  # Output: 3"
+    "print(sol.lengthOfLongestSubstring(\"pwwkew\"))"
    ]
   },
   {
@@ -526,7 +528,7 @@
    "id": "838bb1ff",
    "metadata": {},
    "source": [
-    "## 📌 Maximum Average Subarray (LT-643)"
+    "## 📌 Maximum Average Subarray (LC-643)"
    ]
   },
   {
@@ -609,6 +611,62 @@
     "\n",
     "        return result / k"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5cc6a78e",
+   "metadata": {},
+   "source": [
+    "## 📌 Minimum Size Subarray Sum (LC-209)\n",
+    "\n",
+    "Errors\n",
+    "- Do not calculate sum everytime \n",
+    "- Do not create a new slice everytime \n",
+    "- Starting length can be length of the list instead of inf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "db66610e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def minSubArrayLen(self, target: int, nums: List[int]) -> int:\n",
+    "        # Initialise left and right pointers \n",
+    "        left = 0\n",
+    "        # result = float(\"inf\")\n",
+    "        result = len(nums) + 1\n",
+    "        curr_sum = 0\n",
+    "\n",
+    "        for i in range(len(nums)):\n",
+    "            # Check for sum for current slice \n",
+    "            curr_sum = curr_sum + nums[i]\n",
+    "\n",
+    "            # Check if curr sum is more than target \n",
+    "            while curr_sum >= target:\n",
+    "                # Compare current length with previous length \n",
+    "                # result = min(result, len(nums[left: i+1]))\n",
+    "                result = min(result, i-left+1)\n",
+    "\n",
+    "                # Shift left pointer by 1\n",
+    "                left_curr = nums[left]\n",
+    "                left += 1\n",
+    "\n",
+    "                # Recalculate sum\n",
+    "                curr_sum = curr_sum - left_curr\n",
+    "            \n",
+    "        return 0 if result == float('inf') else result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "72c53161",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
