max size subarray sum k

--- a/arrays.ipynb
+++ b/arrays.ipynb
@@ -661,9 +661,52 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "50988705",
+   "metadata": {},
+   "source": [
+    "## 📌 Maximum Size Subarray Sum Equal K (LC-325)\n",
+    "### 💡 Using Prefix Sum here\n",
+    "### - Notes:\n",
+    "- Sliding Window should not be the first preference for arrays with mix of negative and positive numbers \n",
+    "- Sliding windown is good if sum increses or decreses monotonically (all numbers either positive or negative)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "72c53161",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def maxSubArrayLen(self, nums: List[int], k: int) -> int:\n",
+    "        # Initialize the variables \n",
+    "        seen = {0:-1}\n",
+    "        prefix_sum= 0\n",
+    "        result = 0\n",
+    "\n",
+    "        # Loop through every element and sum\n",
+    "        for i, num in enumerate(nums):\n",
+    "            # Update the sum \n",
+    "            prefix_sum += num\n",
+    "            \n",
+    "            # Check if already present \n",
+    "            if (prefix_sum - k) in seen:\n",
+    "                # Check for length comparing to previous \n",
+    "                result = max(result, i - seen[prefix_sum - k])\n",
+    "        \n",
+    "            # Add if not present \n",
+    "            if prefix_sum not in seen:\n",
+    "                seen[prefix_sum] = i\n",
+    "            \n",
+    "        return result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2bc793d7",
    "metadata": {},
    "outputs": [],
    "source": []
