subarray divisible by k

--- a/arrays.ipynb
+++ b/arrays.ipynb
@@ -483,7 +483,7 @@
    "id": "2f98775f",
    "metadata": {},
    "source": [
-    "## 📌 Longest Substring Without Repearing Character (LT-3)\n",
+    "## 📌 🔖 Longest Substring Without Repearing Character (LT-3)\n",
     "- Non - repeating characters, think of using set() or deque()\n",
     "- Calculate result in each iterations "
    ]
@@ -665,7 +665,7 @@
    "id": "50988705",
    "metadata": {},
    "source": [
-    "## 📌 Maximum Size Subarray Sum Equal K (LC-325)\n",
+    "## 📌 🔖 Maximum Size Subarray Sum Equal K (LC-325)\n",
     "### 💡 Using Prefix Sum here\n",
     "### - Notes:\n",
     "- Sliding Window should not be the first preference for arrays with mix of negative and positive numbers \n",
@@ -704,9 +704,64 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e114cb76",
+   "metadata": {},
+   "source": [
+    "## 📌 🔖 Subarray Sums Divisible by K (LC-974)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "2bc793d7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class Solution:\n",
+    "    def subarraysDivByK(self, nums: List[int], k: int) -> int:\n",
+    "        remainder_map = {0: 1}\n",
+    "        count = 0\n",
+    "        current_sum = 0\n",
+    "\n",
+    "        # Iterate through each number in the array \n",
+    "        for num in nums:\n",
+    "            # Update the current prefix sum \n",
+    "            current_sum += num\n",
+    "\n",
+    "            # Calculate the remainder \n",
+    "            remainder = (current_sum % k + k) % k\n",
+    "\n",
+    "            # Check if this remainder has been seen before \n",
+    "            if remainder in remainder_map:\n",
+    "                # add to the count \n",
+    "                count += remainder_map[remainder]\n",
+    "\n",
+    "                # Increment the count of this remainder \n",
+    "                remainder_map[remainder] += 1\n",
+    "            \n",
+    "            else:\n",
+    "                # Add this remainder to map \n",
+    "                remainder_map[remainder] = 1\n",
+    "        \n",
+    "        return count\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ebcc63b9",
    "metadata": {},
    "outputs": [],
    "source": []
